# KoThok

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md
installer/: README.md  install.bat  install.command  install.ps1  install.sh  uninstall.bat  uninstall.command  uninstall.ps1  uninstall.sh
kothok/: Cargo.toml  Cross.toml  build.rs  grab-tester  grab-tester.c  measure-baseline.sh  run.sh
kothok/package/: .gitignore  make-release.ps1
kothok/package/nm/: config
kothok/samples/: ar-sample.epub  bn-sample.epub  en-sample.epub  hi-sample.epub  ja-sample.epub  multi-sample.epub  script-test.epub  th-sample.epub
kothok/scripts/: deploy.ps1
kothok/src/: app.rs  book_session.rs  callbacks.rs  capabilities.rs  gesture.rs  logger.rs  loop_run.rs  loop_state.rs  main.rs  meta.rs  panel.rs  platform.rs  reader.rs  setup.rs
kothok/src/app/: events.rs  render.rs  sleep_wake.rs  tests.rs
kothok/src/audio/: driver.rs  glue.rs  mod.rs  synth.rs  types.rs
kothok/src/audio/driver/: cache.rs  commands.rs  pipeline.rs
kothok/src/audio/glue/: tests.rs
kothok/src/data/: config.rs  library.rs  mod.rs  persistence.rs
kothok/src/data/persistence/: cache.rs  position.rs
kothok/src/data/persistence/position/: progress_tests.rs
kothok/src/device/: font_download.rs  hw.rs  mod.rs
kothok/src/gesture/: mod.rs  tests.rs
kothok/src/loop_run/: callbacks.rs  picker.rs  power.rs  status.rs  touch_dispatch.rs  touch_release.rs
kothok/src/loop_run/callbacks/: audio.rs  bookmark.rs  jump.rs  mode_toggle.rs  navigation.rs
kothok/src/loop_run/picker/: about.rs  open_book.rs
kothok/src/panel/: callbacks.rs
kothok/src/panel/callbacks/: chapters.rs  connectivity.rs  font.rs  sleep.rs  sliders.rs  voice.rs
kothok/src/rendering/: about.rs  chapter_list.rs  common.rs  covers.rs  fb.rs  layout.rs  logo_data.rs  mod.rs  picker.rs  render.rs  screenshot.rs  splash.rs  text_overlay.rs  vinyl.rs
kothok/src/rendering/layout/: paginate.rs  state.rs  tests.rs
kothok/src/rendering/layout/state/: offsets.rs  rows.rs  utterances.rs
kothok/src/rendering/layout/tests/: sentences.rs  styles.rs
kothok/src/rendering/picker/: filter.rs  header.rs  layout.rs  paging.rs  paint.rs  tests.rs
kothok/src/rendering/splash/: tests.rs
kothok/src/rendering/vinyl/: tests.rs
kothok/src/setup/: book_init.rs  loop_init.rs
kothok/ui/: reader.slint  types.slint
kothok/ui/components/: audio_player.slint  button.slint  chapter_overlay.slint  content.slint  control_panel.slint  loading_overlay.slint  scrollable_text.slint  selector.slint  slider.slint
(+9 files in other folders)
