[workspace]
resolver = "2"

[package]
name = "kothok-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kothok"
path = "src/main.rs"

[features]
default = []
ppm-dump = []

[dependencies]
slint = { version = "=1.8.0", default-features = false, features = ["std", "compat-1-2", "renderer-software", "libm"] }
kobo-core = "0.2"
kothok-edge-tts = "0.2"
tokio = { version = "1", features = ["rt", "time", "net", "io-util"] }
libc = "0.2"
log = "0.4"
fontdue = "0.9"
rustybuzz = "0.18"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

[build-dependencies]
slint-build = "=1.8.0"

[dev-dependencies]
zip = "0.6"
tempfile = "3"

[profile.release]
opt-level = "z"
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
kobo-core = { path = "../../kobo-core" }
kothok-edge-tts = { path = "../../kothok-edge-tts" }
