[workspace]
resolver = "2"
# kobo-core is developed in-tree (see [patch.crates-io] below) and published
# separately. Listing it here is what makes `cargo test -p kobo-core` work --
# without it the patch applies but its dev-dependencies never resolve.
members = ["kobo-core"]

[package]
name = "kothok-app"
version = "0.1.0"
edition = "2021"
authors = ["Nayeem Bin Ahsan"]
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/Nayeem170/kothok"

[[bin]]
name = "kothok"
path = "src/main.rs"

[features]
default = []
ppm-dump = []
# Capture-only build: adds the header-hold screenshot gesture used to produce
# real UI stills for the marketing site. Never ship this to users.
screenshot = []

[dependencies]
slint = { version = "=1.8.0", default-features = false, features = ["std", "compat-1-2", "renderer-software", "libm"] }
kobo-core = "0.3"
kothok-edge-tts = "0.2"
tokio = { version = "1", features = ["rt", "time", "net", "io-util"] }
libc = "0.2"
log = "0.4"
fontdue = "0.9"
rustybuzz = "0.18"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

[build-dependencies]
slint-build = "=1.8.0"

[dev-dependencies]
zip = "0.6"
tempfile = "3"

[profile.release]
opt-level = "z"
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
kobo-core = { path = "kobo-core" }
kothok-edge-tts = { path = "../../kothok-edge-tts" }
